<resources>
    <string name="ingredient_format">%1$s: %2$s</string>
    <string name="app_name">RecipeApp</string>
    <string name="title_home">Recipes</string>
    <string name="title_dashboard">Search</string>
    <string name="title_my_recipes">My recipes</string>
    <string name="title_activity_welcome_page">WelcomePageActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">"Login"</string>
    <string name="title_settings">"Settings"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_profile_image">A image of a user</string>
    <string name="change_pw">Change password</string>
    <string name="change_profile_pic">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_password">Change Password</string>
    <string name="password_criteria">Your password must be at least 4 characters and should include a combination of numbers, letters and special characters</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="account">Account</string>
    <string name="recipe_image">Recipe image</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="sort_by_date">Newest</string>
    <string name="sort_by_rating">Top rated</string>
    <string name="category_name">Category Name</string>
    <string name="sort_by">Sort By</string>
    <string name="no_recipes_available">No recipes available</string>
    <string name="menu_button">menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="appetizer">Appetizer</string>
    <string name="main_course">Main Course</string>
    <string name="snack">Snack</string>
    <string name="dessert">Dessert</string>
    <string name="baking">Baking</string>
    <string name="selected_category">selected category</string>
    <string name="no_more_recipes_available">No more recipes availible</string>
    <string name="load_more">Load More</string>
    <string name="user_management">User Management</string>
    <string name="delete_user">Delete user</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="_50">(50)</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="a_tiny_trash_can_icon">A tiny trash can icon</string>
    <string name="a_pencil">A pencil</string>
    <string name="calendar">Calendar</string>
    <string name="button_name_favorites">Favorites</string>
    <string name="button_name_my_recipes">My Recipes</string>
    <string name="title">Title</string>
    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="save_recipe">Save recipe</string>
    <string name="manage_users">Manage Users</string>
    <string name="registered_users">Below is a list of all registered users.</string>
    <string name="u003c_u003c"><![CDATA[<<]]></string>
    <string name="u003e_u003e"><![CDATA[>>]]></string>
    <string name="add_to_calendar">add to calendar</string>
    <string name="remove_recipe_from_calendar">Remove recipe from calendar</string>
    <string name="category">Category</string>
    <string name="recipes">Recipes</string>
</resources>