<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.settings.PasswordFragment">

    <LinearLayout
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_height="35dp"
            android:layout_width="match_parent"
            android:text="@string/change_password"
            android:textSize="@dimen/written_text_size">
        </TextView>
        <TextView
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:text="@string/password_criteria">
        </TextView>
        <EditText
            android:id="@+id/current_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/current_password"
            android:textSize="20sp"
            android:background="@drawable/rounded_circle_pw"
            android:padding="18dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/new_password"
            android:textSize="20sp"
            android:background="@drawable/rounded_circle_pw"
            android:padding="18dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/again_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/repeat_new_password"
            android:textSize="20sp"
            android:background="@drawable/rounded_circle_pw"
            android:padding="18dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:padding="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/change_pw_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:backgroundTint="#F48FB1"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</RelativeLayout>
