<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hi.recipeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <!-- Action to navigate to FullRecipeFragment from HomeFragment -->
        <action
            android:id="@+id/action_homeFragment_to_fullRecipeFragment"
            app:destination="@id/fullRecipeFragment">
            <argument
                android:name="recipeId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.hi.recipeapp.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >

    <action
            android:id="@+id/action_searchFragment_to_fullRecipeFragment"
            app:destination="@id/fullRecipeFragment">
            <argument
                android:name="recipeId"
                app:argType="integer"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_myrecipes"
        android:name="com.hi.recipeapp.ui.myrecipes.MyRecipesFragment"
        android:label="@string/title_my_recipes"
        tools:layout="@layout/fragment_my_recipes">

        <action
        android:id="@+id/action_myRecipesFragment_to_fullRecipeFragment"
        app:destination="@id/fullRecipeFragment">
        <argument
            android:name="recipeId"
            app:argType="integer"/>
        </action>
    </fragment>


    <!-- Full Recipe Fragment -->
    <fragment
        android:id="@+id/fullRecipeFragment"
        android:name="com.hi.recipeapp.ui.fullrecipe.FullRecipeFragment"
        android:label="Full Recipe"
        tools:layout="@layout/fragment_full_recipe">
        <argument
            android:name="recipeId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.hi.recipeapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
