<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- FrameLayout to hold ImageSwitcher -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ImageSwitcher to show recipe images -->
            <ImageSwitcher
                android:id="@+id/imageSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <ImageView
                    android:id="@+id/switcherImageView"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:contentDescription="@string/recipe_image"
                    android:src="@drawable/placeholder"
                    android:scaleType="centerCrop" />
            </ImageSwitcher>

        </FrameLayout>

        <!-- Recipe name -->
        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textSize="13sp"
            android:textStyle="bold"
            android:fontFamily="@font/playfair_display"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp" />

        <!-- Recipe description -->
        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_description"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="11sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
