<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editRecipe.EditRecipeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        tools:context=".ui.editRecipe.EditRecipeFragment">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="77dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/editTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/editTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" />

        <!-- Description EditText -->
        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:minHeight="48dp"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/instructionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editDescription" />

        <EditText
            android:id="@+id/editInstructions"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:minHeight="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsLabel" />

        <!-- Ingredients Label -->
        <TextView
            android:id="@+id/ingredientsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            app:layout_constraintTop_toBottomOf="@id/editInstructions"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" />

        <!-- Dynamic Ingredients Container -->
        <LinearLayout
            android:id="@+id/ingredientsContainer"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:minHeight="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ingredientsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>